Code Quality and refactoring