@@ -2,9 +2,9 @@ plugins {
     id 'java'
     id 'application'
     id "com.github.johnrengelman.shadow" version "5.2.0"
-    id 'info.solidsoft.pitest' version '1.4.6'
+    id 'info.solidsoft.pitest' version '1.4.8'
     id 'se.patrikerdes.use-latest-versions' version '0.2.13'
-    id 'com.github.ben-manes.versions' version '0.27.0'
+    id 'com.github.ben-manes.versions' version '0.28.0'
 }
 
 
@@ -25,9 +25,9 @@ repositories {
     jcenter()
 
 }
-//compileJava {
-//    options.compilerArgs += ["--enable-preview"]
-//}
+compileJava {
+    options.compilerArgs += ["-Xlint:deprecation"]
+}
 //test {
 //    jvmArgs '--enable-preview'
 //}
@@ -36,21 +36,21 @@ compileJava.options.encoding = 'UTF-8'
 
 dependencies {
 // https://mvnrepository.com/artifact/org.knowm.xchart/xchart
-    compile group: 'org.knowm.xchart', name: 'xchart', version: '3.6.1'
-    compile 'se.michaelthelin.spotify:spotify-web-api-java:4.2.1'
+    compile group: 'org.knowm.xchart', name: 'xchart', version: '3.6.2'
+    compile 'se.michaelthelin.spotify:spotify-web-api-java:4.3.0'
 
 // https://mvnrepository.com/artifact/com.mchange/c3p0
 // https://mvnrepository.com/artifact/se.michaelthelin.spotify/spotify-web-api-java
     compile 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
 // https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14
-    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.10'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.12'
 
-    implementation 'com.neovisionaries:nv-i18n:1.11'
+    implementation 'com.neovisionaries:nv-i18n:1.27'
 
     testCompile group: 'junit', name: 'junit', version: '4.13'
 
-    compile 'net.dv8tion:JDA:4.1.1_108'
+    compile 'net.dv8tion:JDA:4.1.1_133'
 
     compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
 // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
@@ -64,9 +64,9 @@ dependencies {
     compile group: 'org.json', name: 'json', version: '20190722'
 
     //For Youtube search api
-    compile 'com.google.api-client:google-api-client:1.28.0'
-    compile 'com.google.apis:google-api-services-youtube:v3-rev209-1.25.0'
-    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+    compile 'com.google.api-client:google-api-client:1.30.9'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev20200320-1.30.9'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:1.30.6'
 
 // https://mvnrepository.com/artifact/com.twelvemonkeys.imageio/imageio-jpeg
     compile group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.5'
@@ -87,16 +87,16 @@ dependencies {
     testCompile group: 'org.awaitility', name: 'awaitility', version: '4.0.2'
     testCompile group: 'com.openpojo', name: 'openpojo', version: '0.8.13'
 // https://mvnrepository.com/artifact/org.ow2.asm/asm
-    testCompile group: 'org.ow2.asm', name: 'asm', version: '7.3.1'
+    testCompile group: 'org.ow2.asm', name: 'asm', version: '8.0.1'
 
 // https://mvnrepository.com/artifact/org.graphwalker/graphwalker-core
-    testCompile group: 'org.graphwalker', name: 'graphwalker-core', version: '4.1.0'
+    testCompile group: 'org.graphwalker', name: 'graphwalker-core', version: '4.2.0'
 // https://mvnrepository.com/artifact/org.graphwalker/graphwalker-java
     // group: 'org.graphwalker', name: 'graphwalker-java', version: '4.1.0'
 
 // https://mvnrepository.com/artifact/com.pholser/junit-quickcheck-core
     //a
     testCompile group: 'com.pholser', name: 'junit-quickcheck-core', version: '0.9.1'
-    testCompile "org.mockito:mockito-core:3.2.4"
+    testCompile "org.mockito:mockito-core:3.3.3"
 
 }
